# energy-data-proj

./: .env.example  .flake8  .gitignore  Dockerfile.airflow  README.md  airflow.cfg  airflow.db  check_redshift_permissions.py  docker-compose.yml  generate_fernet_key.py  load_example.py  mypy.ini  pyproject.toml  setup.sh  test_redshift_connection.py
.github/workflows/: ci.yml
dags/: fuel_price_dag.py
init_db/: 01_init_schema.sql
notebooks/: 00_analisis_exploratorio.ipynb
sql/: init.sql
src/fuel_price/: __init__.py  config.py  extract.py  get_price_data_SE.py  get_price_data_SE_linux.py  get_price_data_SE_linux.py.old  load.py  load_redshift.py  transform.py
src/pda_project/: extract.py  get_price_data_SE_linux.py  transform.py
tests/: test_extract.py  test_load.py  test_transform.py
