[project]
name = "fuel-price-pipeline"
version = "0.1.0"
description = "ETL pipeline for fuel prices data"
authors = [
    {name = "Sebastian J. Castro",email = "sebastiancastrofragueiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fuel_price", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pytest-mock = "^3.15.1"
responses = "^0.25.8"
types-requests = "^2.32.4.20250913"
pandas-stubs = "^2.3.2.250926"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E266", "F541"]
exclude = [".venv", "__pycache__", ".git"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
