[tool.poetry]
name = "fuel-price-pipeline"
version = "0.1.0"
description = "ETL pipeline for fuel prices data"
authors = ["Sebastian J. Castro <sebastiancastrofragueiro@gmail.com>"]
readme = "README.md"
packages = [{include = "fuel_price", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.3.3"
yfinance = "^0.2.66"
requests = "^2.32.5"
psycopg2-binary = "^2.9.11"
sqlalchemy = ">=1.4.36,<2.0"
pyarrow = "^22.0.0"
python-dotenv = "^1.2.1"
cryptography = "^46.0.3"
apache-airflow = {version = "2.10.3", extras = ["postgres,celery"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pytest-mock = "^3.15.1"
responses = "^0.25.8"
types-requests = "^2.32.4.20250913"
pandas-stubs = "^2.3.2.250926"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E266", "F541"]
exclude = [".venv", "__pycache__", ".git"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
